exports[`test BusinessDetailsForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1
      tabIndex="-1">
      Business details
    </h1>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="BusinessDetails__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="summary">
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint">
          This will be displayed in search results
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            50 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="website">
          Website URL (optional)
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="website"
          name="website"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="linkedin">
          LinkedIn URL (optional)
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="linkedin"
          name="linkedin"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="addressLine">
          Address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="addressLine"
          name="address.address_line"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="suburb">
          Suburb
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="suburb"
          name="address.suburb"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="state">
          State
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="state"
          name="address.state"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="postalCode">
          Postcode
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="postalCode"
          name="address.postal_code"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern="[0-9]{4}"
          type="text"
          value="" />
      </div>
      <fieldset>
        <legend>
          Select the following that apply (optional)
        </legend>
        <input
          checked={false}
          id="start-up"
          name="start-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="start-up" />
        <label
          htmlFor="start-up">
          Start up - up to 5 years from commencement of business, not listed on any stock exchange, and is able to capture a large addressable market using technology
        </label>
        <input
          checked={false}
          id="sme"
          name="sme"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="sme" />
        <label
          htmlFor="sme">
          SME Your business has less than 200 employees and operates independently of any parent organisation for taxation arrangements
        </label>
        <input
          checked={false}
          id="indigenous"
          name="indigenous"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="indigenous" />
        <label
          htmlFor="indigenous">
          Indigenous seller - your business is listed on a directory of Indigenous businesses, such as Supply Nation
        </label>
        <input
          checked={false}
          id="recruitment"
          name="recruitment"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="recruitment" />
        <label
          htmlFor="recruitment">
          Recruitment agency - the primary purpose of the business is resourcing
        </label>
        <input
          checked={false}
          id="product"
          name="product"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="product" />
        <label
          htmlFor="product">
          Product based business - Your services require your proprietary software or hardware.
        </label>
      </fieldset>
      <input
        role="button"
        type="submit"
        value="Update profile" />
    </form>
  </article>
</div>
`;

exports[`test BusinessDetailsForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1
      tabIndex="-1">
      Business details
    </h1>
  </header>
  <article
    role="main">
    <form
      action="/foo/bar"
      id="BusinessDetails__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="summary">
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint">
          This will be displayed in search results
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            50 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="website">
          Website URL (optional)
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="website"
          name="website"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="linkedin">
          LinkedIn URL (optional)
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="linkedin"
          name="linkedin"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="addressLine">
          Address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="addressLine"
          name="address.address_line"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="suburb">
          Suburb
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="suburb"
          name="address.suburb"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="state">
          State
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="state"
          name="address.state"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="postalCode">
          Postcode
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="postalCode"
          name="address.postal_code"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern="[0-9]{4}"
          type="text"
          value="" />
      </div>
      <fieldset>
        <legend>
          Select the following that apply (optional)
        </legend>
        <input
          checked={false}
          id="start-up"
          name="start-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="start-up" />
        <label
          htmlFor="start-up">
          Start up - up to 5 years from commencement of business, not listed on any stock exchange, and is able to capture a large addressable market using technology
        </label>
        <input
          checked={false}
          id="sme"
          name="sme"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="sme" />
        <label
          htmlFor="sme">
          SME Your business has less than 200 employees and operates independently of any parent organisation for taxation arrangements
        </label>
        <input
          checked={false}
          id="indigenous"
          name="indigenous"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="indigenous" />
        <label
          htmlFor="indigenous">
          Indigenous seller - your business is listed on a directory of Indigenous businesses, such as Supply Nation
        </label>
        <input
          checked={false}
          id="recruitment"
          name="recruitment"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="recruitment" />
        <label
          htmlFor="recruitment">
          Recruitment agency - the primary purpose of the business is resourcing
        </label>
        <input
          checked={false}
          id="product"
          name="product"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="product" />
        <label
          htmlFor="product">
          Product based business - Your services require your proprietary software or hardware.
        </label>
      </fieldset>
      <input
        role="button"
        type="submit"
        value="Update profile" />
    </form>
  </article>
</div>
`;

exports[`test BusinessDetailsForm renders with populated fields 1`] = `
<div
  className="layout">
  <header>
    <h1
      tabIndex="-1">
      Business details
    </h1>
  </header>
  <article
    role="main">
    <div
      aria-describedby="validation-masthead-heading"
      className="callout--warning"
      role="alert"
      tabIndex="-1">
      <h4
        id="validation-masthead-heading">
        There was a problem with the details you gave
      </h4>
      <ul>
        <li>
          <a
            href="#summary">
            You must provide a seller summary
          </a>
        </li>
      </ul>
    </div>
    <form
      action={undefined}
      id="BusinessDetails__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="summary">
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint">
          This will be displayed in search results
        </p>
        <a
          className="validation-message"
          href="#summary">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            You must provide a seller summary
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="invalid under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            50 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="website">
          Website URL (optional)
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="website"
          name="website"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="www.com" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="linkedin">
          LinkedIn URL (optional)
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="linkedin"
          name="linkedin"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="www.linked.in" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="addressLine">
          Address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="addressLine"
          name="address.address_line"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="Level 5, 77 Devon Street" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="suburb">
          Suburb
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="suburb"
          name="address.suburb"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="Surry Hills" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="state">
          State
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="state"
          name="address.state"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="NSW" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="postalCode">
          Postcode
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="postalCode"
          name="address.postal_code"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern="[0-9]{4}"
          type="text"
          value="2010" />
      </div>
      <fieldset>
        <legend>
          Select the following that apply (optional)
        </legend>
        <input
          checked={false}
          id="start-up"
          name="start-up"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="start-up" />
        <label
          htmlFor="start-up">
          Start up - up to 5 years from commencement of business, not listed on any stock exchange, and is able to capture a large addressable market using technology
        </label>
        <input
          checked={false}
          id="sme"
          name="sme"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="sme" />
        <label
          htmlFor="sme">
          SME Your business has less than 200 employees and operates independently of any parent organisation for taxation arrangements
        </label>
        <input
          checked={false}
          id="indigenous"
          name="indigenous"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="indigenous" />
        <label
          htmlFor="indigenous">
          Indigenous seller - your business is listed on a directory of Indigenous businesses, such as Supply Nation
        </label>
        <input
          checked={false}
          id="recruitment"
          name="recruitment"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="recruitment" />
        <label
          htmlFor="recruitment">
          Recruitment agency - the primary purpose of the business is resourcing
        </label>
        <input
          checked={false}
          id="product"
          name="product"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
          value="product" />
        <label
          htmlFor="product">
          Product based business - Your services require your proprietary software or hardware.
        </label>
      </fieldset>
      <input
        role="button"
        type="submit"
        value="Update profile" />
    </form>
  </article>
</div>
`;
